fixed spacing in code

--- a/components/ProductCard/styles.module.scss
+++ b/components/ProductCard/styles.module.scss
@@ -1,37 +1,59 @@
- .productCard{
-    max-width: 420px;
-    margin: 2rem auto 0;
-    footer{
-        margin: 1rem 0;
-    }
-    button{
-        border:none;
-        background-color: #3b82f6;
-        color:#eff6ff;
-        padding: 0.5rem 2rem;
-        border-radius: 3px;
-        font-size:1.25rem;
-    }
-    img{
-        width:100%;
-    }
- }
+.productCard{
+  max-width: 420px;
+  margin: 2rem auto 0;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 2px 20px #0000003a;
+  border-radius: 10px;
+  overflow: hidden;
+  
+  footer {
+    margin: auto 0 2rem;
+    padding: 0 1rem;
+  }
 
- .price{
-   font-size:1.75rem;
-   font-weight: 200;
-   color:#64748b;
-   margin: 0.25rem 0;
- }
+  button {
+    border:none;
+    background-color: #3b82f6;
+    color:#eff6ff;
+    padding: 0.5rem 2rem;
+    border-radius: 3px;
+    font-size:1.25rem;
+    cursor: pointer;
+    transition: 0.2s ease;
+  }
 
- .description{
-    font-size: 14px;
-    color:#94a3b8;
+  button:hover {
+    background-color: #1f5b92;
+  }
 
- }
+  img {
+    width:100%;
+    object-fit: cover;
+  }
+}
 
- .name{
-     font-size: 2.75rem;
-     font-weight: 800;
-     color:#1e293b;
- }
+.price{
+  font-size:1.75rem;
+  font-weight: 200;
+  color:#64748b;
+  margin: 0.25rem 0;
+}
+
+.description{
+  font-size: 14px;
+  color:#94a3b8;
+  margin-bottom: 1rem;
+}
+
+.name{
+  font-size: 2rem;
+  line-height: 2rem;
+  font-weight: 800;
+  color:#1e293b;
+  margin-top: 1rem;
+}
+
+.info {
+  padding: 0 1rem;
+}
